[package]
name = "pwstg"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = "0.10"
argon2 = "0.5"
hex = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
whoami = "2.0.0-pre.2"
bincode = "1.3.3"
ratatui = "0.30.0-alpha.2"
crossterm = "0.29.0"
color-eyre = "0.6.3"
indexmap = "2.9.0"