[package]
name = "pwstg"
description = "Password manager utility"
authors = ["MOBSkuchen"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MOBSkuchen/pwstg"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
chacha20poly1305 = "0.10"
argon2 = "0.5"
serde = { version = "1.0.219", features = ["derive"] }
whoami = "2.0.0-pre.2"
bincode = "1.3.3"
ratatui = "0.30.0-alpha.2"
crossterm = "0.29.0"
color-eyre = "0.6.3"
indexmap = "2.9.0"
dirs = "6.0.0"
arboard = "3.5.0"
rpassword = "7.2.0"